add: 正常系の機能

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,23 @@
   </head>
 
   <body>
+    <header style="max-width: 1000px; margin: auto;">
+      <div style="display: flex;">
+        <div>
+          <%= link_to 'ユーザー管理', users_path %>
+          <%= link_to '投稿管理', posts_path %>
+        </div>
+        <div style="margin-left: auto;">
+          <% if current_user.present? %>
+            <%= link_to 'ログアウト', session_path, data: { turbo_method: :delete, turbo_confirm: 'ログアウトしますか？' } %>
+          <% else %>
+            <%= link_to 'ログイン', new_session_path %>
+          <% end %>
+        </div>
+      </div>
+
+    </header>
+    <hr>
     <%= yield %>
   </body>
 </html>
